# autd3-for-practice

./: .gitmodules  LICENSE  README.md
.github/workflows/: build.yml  lint.yml
client/: CMakeLists.txt  README.md  build.ps1
client/autdsoem/: CMakeLists.txt  autdsoem.cpp
client/example/: CMakeLists.txt  simple.cpp
client/include/: autd3.hpp  soem_link.hpp
client/lib/: CMakeLists.txt  autdsoem.hpp  controller.cpp  ec_config.hpp  ethercat_link.cpp  ethercat_link.hpp  gain.cpp  geometry.cpp  link.cpp  link.hpp  modulation.cpp  privdef.hpp  soem_link.cpp  soem_link.hpp
